<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="project.museum.view.Login"
        tools:layout_editor_absoluteY="81dp"
        tools:layout_editor_absoluteX="0dp"
        android:configChanges="locale">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextName"
            android:hint="@string/login_name"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="77dp"
            android:layout_marginLeft="64dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="64dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.504"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextPassword"
            android:hint="@string/login_password"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextName"
            android:layout_marginLeft="64dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="64dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.503"/>

    <Button
            android:text="@string/login_button"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/editTextPassword"
            android:onClick="loginClick"
            />

    <Button
            android:text="@string/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonGotoRegister"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="@+id/editTextPassword"
            android:onClick="registerClick"/>

    <Button
            android:text="@string/login_guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonGuest"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/buttonLogin"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="@+id/buttonGotoRegister"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            app:layout_constraintHorizontal_bias="0.513"
            android:onClick="guestClick"/>

    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/malmo_stad_logo"
            android:id="@+id/imageViewMalmo"
            android:layout_marginLeft="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonGuest"/>

    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/eu_logo"
            android:id="@+id/imageViewEU"
            app:layout_constraintRight_toLeftOf="@+id/imageViewSC"
            android:layout_marginRight="16dp"
            app:layout_constraintLeft_toRightOf="@+id/imageViewMalmo"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonGuest"/>

    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/science_center_malmo_logo"
            android:id="@+id/imageViewSC"
            android:layout_marginRight="32dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonGuest"/>
</android.support.constraint.ConstraintLayout>